--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -1,34 +1,42 @@
-<script>
-function copyToClipboard(element) {
-  var $temp = $("<input>");
-  $("body").append($temp);
-  $temp.val(element).select();
-  document.execCommand("copy");
-  $temp.remove();
-}
-</script>
+<% content_for :title do %>
+  API sleutel: <%= @rawkey %>
+<% end %>
 
-<a href="#" onclick='copyToClipboard("<%= @rawkey %>");'>
-  <center><img alt="Embedded Image" src="<%= @key %>" /></center>
-</a><br><br>
-<table>
-  <thead>
-    <tr>
-      <th>ip / time</th>
-      <th>call</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @logs.each do |l| %>
-      <tr>
-        <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d-%m-%Y %H:%M') %></td>
-        <td><%= l.resource_call %></td>
-      </tr>
-    <% end %>
-  </tbody>
-  <%= will_paginate @logs %>
-</table>
-<br>
-<form action="<%= request.base_url %>/ical/<%= @rawkey %>/cal.ics">
-  <button type="submit" class="btn btn-large btn-success">iCal</button> (<%= "#{request.base_url}/ical/#{@rawkey}/cal.ics" %>)
-</form>
+<div class="row">
+  <div class="col-md-12">
+  <form action="<%= request.base_url %>/ical/<%= @rawkey %>/cal.ics">
+    <button type="submit" class="btn btn-large btn-success">iCal</button> (<%= "#{request.base_url}/ical/#{@rawkey}/cal.ics" %>)
+  </form>
+
+  <hr>
+
+  <h2>API key gebruiksgeschiedenis</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>ip / time</th>
+          <th>call</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @logs.each do |l| %>
+          <tr>
+            <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d-%m-%Y %H:%M') %></td>
+            <td><%= l.resource_call %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= will_paginate @logs %>
+  </div>
+</div>
+
+<script type="application/javascript">
+  function copyToClipboard(element) {
+    var $temp = $("<input>");
+    $("body").append($temp);
+    $temp.val(element).select();
+    document.execCommand("copy");
+    $temp.remove();
+  }
+</script>
