--- a/app/views/meetings/notuleer.html.erb
+++ b/app/views/meetings/notuleer.html.erb
@@ -18,7 +18,7 @@
   <%= f.hidden_field :user_id, value: current_user.id %>
   <div class="field">
     <%= f.label :notes %><br>
-    <%= f.trix_editor :notes, rows: 25, data: { :provide => "markdown" } %>
+    <%= f.trix_editor :notes %>
   </div>
   <div class="actions">
     <%= f.submit %>
