--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -4,30 +4,35 @@
 
 <div class="row">
   <div class="col-md-12">
-  <form action="<%= request.base_url %>/ical/<%= @rawkey %>/cal.ics">
-    <button type="submit" class="btn btn-large btn-success">iCal</button> (<%= "#{request.base_url}/ical/#{@rawkey}/cal.ics" %>)
-  </form>
+    <form id="ical_form" action="<%= "#{request.base_url}/ical/#{@rawkey}/cal.ics" %>"%></form>
+    <div class="btn-group">
+      <button type="submit" class="btn btn-primary" form="ical_form">iCal</button>
+      <button class="btn btn-primary" onclick='copyToClipboard("<%= @rawkey %>");'>
+        Kopieer naar klembord
+      </button>
+    </div>
 
-  <hr>
+    <hr>
 
-  <h2>API key gebruiksgeschiedenis</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>ip / time</th>
-          <th>call</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @logs.each do |l| %>
+    <h2>API key gebruiksgeschiedenis</h2>
+      <table>
+        <thead>
           <tr>
-            <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d-%m-%Y %H:%M') %></td>
-            <td><%= l.resource_call %></td>
+            <th>ip / time</th>
+            <th>call</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
-    <%= will_paginate @logs %>
+        </thead>
+        <tbody>
+          <% @logs.each do |l| %>
+            <tr>
+              <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d-%m-%Y %H:%M') %></td>
+              <td><%= l.resource_call %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= will_paginate @logs %>
+    </div>
   </div>
 </div>
 
