--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class="row">
   <div class="col-md-12">
-    <form id="ical_form" action="<%= "#{request.base_url}/ical/#{@rawkey}/cal.ics" %>"%></form>
+    <form id="ical_form" action="<%= "#{request.base_url}/ical/#{@rawkey}/cal.ics" %>"></form>
     <div class="btn-group">
       <button type="submit" class="btn btn-primary" form="ical_form">iCal</button>
       <button class="btn btn-primary" onclick='copyToClipboard("<%= @rawkey %>");'>
