oke nu is het wel goed

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title do %>
-  Activiteiten
-<% end %>
+  Activiteiten <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample"> 
+  <i class="fas fa-calendar-alt"></i></button>
+<% end %> 
 <div class="row">
   <div class="col-md-12">
     <div class="collapse" id="collapseExample">
