Fix layout of buttons

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -199,6 +199,10 @@ table.events thead tr th, table.tablesorter tfoot tr th {
   background-color: #e6EEEE;
 }
 
+.admin-column {
+  width: 110px;
+}
+
 .thumbnail-member {
   text-align: center;
   border: none;
