--- a/app/views/events/_table.html.erb
+++ b/app/views/events/_table.html.erb
@@ -4,7 +4,7 @@
       <th>Activiteit</th>
       <th>Datum</th>
       <th>Aanwezig</th>
-      <th>Admin</th>
+      <th class="admin-column">Admin</th>
     </tr>
   </thead>
   <tbody>
