--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -15,7 +15,7 @@
     <hr>
 
     <h2>API key gebruiksgeschiedenis</h2>
-      <table>
+      <table class="table">
         <thead>
           <tr>
             <th>ip / time</th>
