--- a/app/views/static_pages/invited.html.erb
+++ b/app/views/static_pages/invited.html.erb
@@ -10,6 +10,6 @@
     </div>
     <br>
     <%= link_to "Privacy Statement", "/privacy" %>
-    <p><%= f.submit "Registreer", class: "btn btn-large btn-success" %></p>
+    <p><%= f.submit "Registreren", class: "btn btn-large btn-success" %></p>
   <% end %>
 <% end %>
