--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,9 +11,9 @@
  = require "nprogress"
  = require "nprogress-bootstrap"
  = require_tree .
+ *= require 'trix/dist/trix'
  *= require font_awesome5
  *= require rails_bootstrap_forms
- *= require trix
  */
 
 .albumimage {
