--- a/app/views/brews/_form.html.erb
+++ b/app/views/brews/_form.html.erb
@@ -12,7 +12,7 @@
         </div>
     <% end %>
     <div class="form-group">
-      <%= f.trix_editor :description, class: 'form-control' %>
+      <%= f.rich_text_area :actiontext_description, class: 'form-control' %>
     </div>
     <div class="actions">
       <%= f.submit :Verstuur, class: 'btn btn-primary' %>
