--- a/app/views/brews/show.html.erb
+++ b/app/views/brews/show.html.erb
@@ -3,7 +3,11 @@
 <% end %>
 <div class="row">
   <div class="col-md-9">
-    <%= markdown(@brew.description).html_safe %>
+    <% if @brew.actiontext_description.blank? %>
+      <%= markdown(@brew.description).html_safe %>
+    <% else %>
+      <%= @brew.actiontext_description %>
+    <% end %>
   </div>
   <div class="col-md-3">
     Uitvoeringen:<br>
