--- a/app/views/recipe/edit.html.erb
+++ b/app/views/recipe/edit.html.erb
@@ -25,7 +25,7 @@
       <%= f.text_field :beer, class: 'form-control', required: true, minlength: 2 %>
     </div>
     <div class="form-group">
-      <%= f.trix_editor :description, class: 'form-control' %>
+      <%= f.rich_text_area :actiontext_description, class: 'form-control' %>
     </div>
     <div class="actions">
       <%= f.submit :Verstuur, class: 'btn btn-primary' %>
