--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,8 +1,6 @@
 <% content_for :title do %>
   Bieren
 <% end %>
-<%= javascript_pack_tag "application" %>
-<div data-content-loader-url="/beers">
 
 <div class="row">
   <div class="col-md-6">
@@ -27,7 +25,7 @@
 </div>
 
 
-<table id="bier" class="table">
+<table id="bier" class="table table-hover">
   <thead>
     <tr>
       <% ordering = params[:order] == "asc" ? "desc" : "asc" %>
