--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -28,13 +28,28 @@
 <table id="bier" class="table table-hover">
   <thead>
     <tr>
+      <col width="20%">
+      <col width="20%">
+      <col width="10%">
+      <col width="20%">
+      <col width="20%">
+      <col width="10%">
+
       <% ordering = params[:order] == "asc" ? "desc" : "asc" %>
-      <th><%= link_to "Naam", params.permit(:sort, :order, :search, :utf8).merge({sort: :name, order: ordering}) %></th>
-      <th><%= link_to "Soort", params.permit(:sort, :order, :search, :utf8).merge({sort: :soort, order: ordering}) %></th>
-      <th><%= link_to "Cijfer", params.permit(:sort, :order, :search, :utf8).merge({sort: :grade, order: ordering}) %></th>
-      <th><%= link_to "Brouwer", params.permit(:sort, :order, :search, :utf8).merge({sort: :brewer, order: ordering}) %></th>
-      <th><%= link_to "Land", params.permit(:sort, :order, :search, :utf8).merge({sort: :country, order: ordering}) %></th>
-      <th><%= link_to "Aantal reviews", params.permit(:sort, :order, :search, :utf8).merge({sort: :review_count, order: ordering}) %></th>
+      
+      <% if params[:sort] == "name" %><% name_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+      <% if params[:sort] == "soort" %><% soort_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+      <% if params[:sort] == "grade" %><% grade_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+      <% if params[:sort] == "brewer" %><% brewer_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+      <% if params[:sort] == "country" %><% country_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+      <% if params[:sort] == "review_count" %><% review_count_arrow = params[:order] == "asc" ? " ↓" : " ↑"%><% end %>
+
+      <th><%= link_to "Naam" + name_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :name, order: ordering}) %></th>
+      <th><%= link_to "Soort" + soort_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :soort, order: ordering}) %></th>
+      <th><%= link_to "Cijfer" + grade_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :grade, order: ordering}) %></th>
+      <th><%= link_to "Brouwer" + brewer_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :brewer, order: ordering}) %></th>
+      <th><%= link_to "Land" + country_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :country, order: ordering}) %></th>
+      <th><%= link_to "Aantal reviews" + review_count_arrow.to_s, params.permit(:sort, :order, :search, :utf8).merge({sort: :review_count, order: ordering}) %></th>
 
       <% if current_user&.admin? %>
         <th></th>
