--- a/app/views/users/index_public.html.erb
+++ b/app/views/users/index_public.html.erb
@@ -5,7 +5,7 @@
 <div class="col-md-12 mb-5">
   <figure class="figure">
     <img src="<%= image_path('members.jpg') %>" class="img-responsive" alt="Responsive image">
-    <figcaption class="figure-caption">Hamers zonder Sikkel - 23 maart 2019. Copyright Tom Feij.</figcaption>
+    <figcaption class="figure-caption">Hamers zonder Sikkel - 11 september 2019.</figcaption>
   </figure>
 
   <hr>
