--- a/app/views/user_mailer/mail_event_reminder.html.erb
+++ b/app/views/user_mailer/mail_event_reminder.html.erb
@@ -10,6 +10,9 @@
   <body>
     <p>Hallo <%= @user.name %>,</p>
     <p>Helaas ben je er tot op heden niet in geslaagd je aan of af te melden voor het event: "<%= @event.title %>" op <%= @event.date.strftime("%d-%m-%Y") %>. Om voor iedereen het te verwachte aantal aanwezige leden zo overzichtelijk mogelijk te maken wordt je hierbij verzocht dat zo snel mogelijk alsnog te doen.</p>
+    <% if @druif %>
+    <p>In het verleden lijk je geen gebruik te hebben gemaakt van deze herinnering, waardoor je een zorgwekkend laag sunday ratio hebt, dus doe eens inschrijven.</p>
+    <% end %>
     <p>Veel succes, moeilijk is het niet</p>
     <p>P.S.</p>
     <p>https://zondersikkel.nl/events/<%= @event.id %></p>
