--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -18,13 +18,7 @@
         <%= ak.name %>
         : <%= link_to ak.key, ak %> <%= link_to ak, method: :delete, data: {confirm: 'Zeker weten?'}, class: 'btn btn-xs' do %>
         <i class="far fa-trash-alt"></i>
-      <% end %><br>
-      Last used:
-      <% if log = ApiLog.where(key: ak.key).last %>
-        <%= log.created_at.strftime('%d-%m-%Y %H:%m') %> by: <%= log.ip_addr %>
-      <% else %>
-        Not yet used
-      <% end %><br>
+      <% end %>
     <% end %>
     <%= form_for(ApiKey.new) do |f| %>
       <div class="form-group">
