Simplify gravatar usage

--- a/app/views/quotes/_quote.html.erb
+++ b/app/views/quotes/_quote.html.erb
@@ -1,5 +1,5 @@
 <li id="quote_<%= quote.id %>">
-  <%= link_to gravatar_for(quote.user), quote.user, class: 'gravatar img img-responsive' %>
+  <%= link_to gravatar_for quote.user %>
   <span class="user">
     <%= link_to quote.user.name, quote.user %>
   </span>
