--- a/app/views/users/index_public.html.erb
+++ b/app/views/users/index_public.html.erb
@@ -23,7 +23,7 @@
             <% group[1].each do |user| %>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                 <div class="thumbnail thumbnail-member">
-                  <%= gravatar_for user, size: 150, class: 'img img-responsive' %>
+                  <%= gravatar_for user, size: 150 %>
                   <div class="caption">
                     <h4>
                       <%= user.name %> <%= '(Aspirant)' if user.alid? %>
