--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,16 +1,16 @@
-<% if !@beer.nil? %>
-  <div class="media">
+<% unless @beer.nil? %>
+<div class="media">
     <span class="media-left media-middle">
-      <img class="media-object gravatar" style="max-height: 75px;" src="<%= @beer.picture %>" alt="<%= @beer.name %>">
+      <img class="media-object gravatar" style="max-height: 75px;" src="<%=  @beer.picture  %>" alt="<%=  @beer.name  %>">
     </span>
-    <div class="media-body media-middle">
-      <h4 class="media-heading"><%= link_to @beer.name, @beer %></h4>
-      <span>
-        Cijfer: <%= @beer.cijfer? %>
+  <div class="media-body media-middle">
+    <h4 class="media-heading"><%=  link_to @beer.name, @beer  %></h4>
+    <span>
+        Cijfer: <%=  @beer.cijfer?  %>
       </span>
-      <span>
+    <span>
         <%= pluralize(@beer.reviews.count, 'review') %>
       </span>
-    </div>
   </div>
-<% end %>
+</div>
+<%  end %>
