--- a/app/views/blogitems/new.html.erb
+++ b/app/views/blogitems/new.html.erb
@@ -4,4 +4,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', blogitems_path, class: 'btn btn-default' %>
+<%= link_to 'Terug', blogitems_path, class: 'btn btn-default' %>
