--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -1,4 +1,4 @@
-<% unless @beer.nil? %>
+<% unless @beer %>
 <div class="media">
     <span class="media-left media-middle">
       <img class="media-object gravatar" style="max-height: 75px;" src="<%=  @beer.picture  %>" alt="<%=  @beer.name  %>">
