--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,8 +5,7 @@
   <div class="col-md-8">
     <p>
       <i class="far fa-clock"></i> <%= @event.date.strftime('%d-%m-%Y %H:%M') %>
-      <% if @event.end_time? %>tot <%= @event.end_time.strftime('%d-%m-%Y %H:%M') %>
-      <% end %>
+      <%= "tot #{@event.end_time.strftime('%d-%m-%Y %H:%M')}" if @event.end_time? %>
     </p>
     <% if @event.location != nil and @event.location.length > 1 %>
       <p><i class="fa fa-map-marker"></i> <%= @event.location %></p>
