--- a/app/views/api_keys/show.html.erb
+++ b/app/views/api_keys/show.html.erb
@@ -12,27 +12,9 @@
       </button>
     </div>
 
-    <hr>
-
-    <h2>API key gebruiksgeschiedenis</h2>
-      <table class="table">
-        <thead>
-          <tr>
-            <th>ip / time</th>
-            <th>call</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% @logs.each do |l| %>
-            <tr>
-              <td><%= l.ip_addr %> / <%= l.created_at.strftime('%d-%m-%Y %H:%M') %></td>
-              <td><%= l.resource_call %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-      <%= will_paginate @logs %>
-    </div>
+<!--    <hr> -->
+<!--    <h2>API key gebruiksgeschiedenis</h2> -->
+<!--    TODO See: https://github.com/jackozi/hamers/issues/56 -->
   </div>
 </div>
 
